--- a/README.Rmd
+++ b/README.Rmd
@@ -16,39 +16,42 @@ knitr::opts_chunk$set(
 # poputils
 
 <!-- badges: start -->
+[![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
 <!-- badges: end -->
 
-The goal of poputils is to ...
+Miscellaneous functions for demographic analysis.
+
+The functions are low level in the sense that they work with simple data structures, and are general-purpose. They are also fast.
+
 
 ## Installation
 
-You can install the development version of poputils like so:
-
 ``` r
-# FILL THIS IN! HOW CAN PEOPLE INSTALL YOUR DEV PACKAGE?
+## library(devtools)
+devtools::install_github("bayesiandemography/poputils")
 ```
 
-## Example
+## Functions
 
-This is a basic example which shows you how to solve a common problem:
+### Life expectancy, life tables
 
-```{r example}
-library(poputils)
-## basic example code
-```
+- `lifeexp()` Calculate life expectancy from data on mortality rates.
+- `Lx()` Calculate life table function *L~x~* (person-years lived) from data on mortality rates. *Not written yet*
 
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
+### Age group labels *Not written yet*
 
-```{r cars}
-summary(cars)
-```
+- `parse_age_group()` Extract lower and upper limits from age group labels.
+- `find_age_group()` Locate one set of age group labels in another set.
+- `recode_age_group()` Recode one set of age group labels to align to another set.
 
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this. You could also use GitHub Actions to re-render `README.Rmd` every time you push. An example workflow can be found here: <https://github.com/r-lib/actions/tree/v1/examples>.
+### Generate counts of demographic events *Not written yet*
 
-You can also embed plots, for example:
+- `means_popn_one()` Compute mean values for stocks and flows for a single population. 
+- `draw_popn_one()` Randomly generate stocks and flows for a single population.
+- `prob_popn_one()` Calculate the probability of values for stocks and flows for a single population.
+- `means_popn_inter()` Compute mean values for stocks and flows for multiple interacting populations. 
+- `draw_popn_inter()` Randomly generate stocks and flows for multiple interacting populations.
+- `prob_popn_inter()` Calculate the probability of values for stocks and flows for multiple interacting populations.
 
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
+*More to be added*
 
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
