--- a/vignettes/poputils.Rmd
+++ b/vignettes/poputils.Rmd
@@ -1,10 +1,19 @@
 ---
 title: "poputils"
-output: rmarkdown::html_vignette
+output:
+  bookdown::html_document2:
+    base_format: rmarkdown::html_vignette
+    fig_caption: yes
+    toc: true
+    toc_depth: 2
+    number_sections: true
+pkgdown:
+  as_is: true
 vignette: >
   %\VignetteIndexEntry{poputils}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
+bibliography: references.bib
 ---
 
 ```{r, include = FALSE}
@@ -14,25 +23,18 @@ knitr::opts_chunk$set(
 )
 ```
 
-```{r setup}
-library(poputils)
-```
+# Aims of package
 
+**poputils** contains a small, but growing, set of tools for carrying out tasks that are commonly encountered when working with demographic data. The design strategy of **poputils** is:
 
-# Aims
-
-Anyone who analyzes demographic data finds themselves doing the same tasks repeatedly: interpreting age labels, calculating life expectancies, rearranging events and exposures data into a common format, and so on. **poputils** contains a small, but growing, set of tools for carrying out these common tasks.
-
-The design principles of **poputils** are:
-
-- Fit in to [tidyverse](https://www.tidyverse.org) workflows. For instance, use data frames for inputs and outputs, use [tidyselect](https://tidyselect.r-lib.org/reference/language.html) methods to specify variables, and follow tidyverse conventions for variable names.
-- Use [rvecs](https://bayesiandemography.github.io/rvec/reference/rvec.html) to represent uncertainty. An rvec is a random vector holding multiple draws that behaves similarly to an ordinary R vector.
-- Use a common set of methods for handling age and time labels.
+- Fit into [tidyverse](https://www.tidyverse.org) workflows. For instance, use data frames for inputs and outputs, use [tidyselect](https://tidyselect.r-lib.org/reference/language.html) methods to specify variables, and follow tidyverse conventions for variable names.
+- Accommodate uncertainty, using [rvecs](https://bayesiandemography.github.io/rvec/reference/rvec.html). An rvec is a random vector holding multiple draws that behaves similarly to an ordinary R vector.
+- Allow users to work directly with age and time labels, based on common set of methods.
 
 Some functions in **poputils** are aimed directly at data analysts working on demographic datasets. Others are aimed at programmers creating functions to be used at data analysts.
 
 
-# Functions for data analysts
+# Tools for data analysts
 
 ## Labels
 
@@ -46,16 +48,16 @@ Age label functions in **poputils** require that age labels belong to one of thr
 - `"five"`. Five-year age groups, possibly including an open age group, eg `"0-4"`, `"80-84"`, `"15-19"`, `"100+"`.
 - `"lt"`. Life table age groups. Like `"five"`, but with the `"0-4"` age group split into `"0"` and `"1-4"`.
 
-(More types may be added in future.) Age labels created within **poputils** (eg by function `age_labels()`) follow a standard set of rules, by **poputils** functions can parse labels constructed using other rules,
+Age labels created by **poputils** functions such as `age_labels()` follow a standard set of rules. Many age labels created using other rules can, however, be parsed by **poputils** functions,
 
 ```{r}
 library(poputils)
 library(dplyr, warn.conflicts = FALSE)
-tibble(x = c("5 to 9", "5_9", "05-09"),
-       reformated_x = reformat_age(x))
+tibble(original = c("5 to 9", "5_9", "05-09"),
+       reformated = reformat_age(original))
 ```
 
-Functions `age_lower()`, `age_upper()`, and  `age_mid()` extract information about the limits and centers of age groups than can be useful for ordering data
+Functions `age_lower()`, `age_upper()`, and  `age_mid()` extract information about lower limits, upper limits, and centers of age groups. This can be useful for ordering data
 ```{r}
 df <- data.frame(age = c("5-9", "0-4", "15-19", "10-14"),
                  population = c(3, 7, 2, 4))
@@ -81,14 +83,19 @@ tibble(age = age_labels("lt", max = 30),
        age_25plus = set_age_open(age, lower = 20))
 ```
 
+The aim is that users should be able to with age group labels throughout the analysis.
 
 ### Sex/gender
 
-Function `reformat_sex()` converts categories in a binary sex/gender variable to `"Female"` and `"Male"`. Once conventions emerge for the labeling of additional sex/gender categories, additional options will be added to the function.
+Function `reformat_sex()` converts sex/gender categories to `"Female"`, `"Male"`, and any additional categories specified through the `except` argument,
+```{r}
+reformat_sex(c("M", "F", "Diverse", "Fem"), except = "Diverse")
+```
+
 
 ## Life tables and life expectancy
 
-A life table a way of summarizing mortality conditions through quantities calculated from age-specific mortality rates. Life expectancy is the best-known of the life table quantities. 
+A life table a way of summarizing mortality conditions. It consists of quantities calculated from age-specific mortality rates. The most widely-used life table quantity is life expectancy at birth.
 
 ### Basic functionality
 
@@ -101,16 +108,7 @@ nzmort %>%
   lifetab()  
 ```
 
-Function `lifeexp()` focuses in on life expectancy at birth
-
-```{r}
-nzmort %>%
-  filter(year == 2022,
-         gender == "Female") %>%
-  lifeexp()  
-```
-
-`lifetab()` and `lifeexp()` both have `by` arguments, which can be used to obtain separate results for subpopulations,
+`lifetab()` and `lifeexp()` both have a `by` argument. Separate results are calculated for each combination of the `by` variables,
 ```{r}
 nzmort %>%
   lifeexp(by = c(gender, year))  
@@ -127,15 +125,15 @@ nzmort %>%
 
 ### Calculation methods
 
-Demographers have developed many methods for converting mortality rates into life table quantities. The main challenge is capturing changes in mortality rates within each age interval. Correctly representing these changes can be particularly important in the infant ("0") and child ("1-4") age groups, where internal differences can be pronounced. Results are also sensitive to the choice of method when mortality rates are high, and when 5-year, rather than 1-year, age intervals are used.
+Demographers have developed many methods for converting mortality rates into life table quantities [@preston2001demography; @keyfitz2005applied]. The main challenge is capturing the way that mortality rates vary within each age interval. Mortality rates are expecially variable during the first year of life.
 
-It turns out that, for the purposes of constructing life tables, all relevant information about changes within an age interval can be captured by a single number: the average length of time lived during that interval by people who die in the interval (Preston et al 2001: 43). This number is denoted $_na_x$, where $x$ is exact age at the start of the internal, and $n$ is the length of the interval. For instance, $_5a20$ refers to the average number of years lived between their 20th and 25th birthdays by people who die between their 20th and 25th birthdays.
+It turns out that, for the purposes of constructing life tables, all relevant information about variation within an age interval can be captured by a single number: the average length of time lived in the interval by people who die in the interval [@preston2001demography, p.43]. This number is denoted $_na_x$, where $x$ is exact age at the start of the internal, and $n$ is the length of the interval. The quantity $_5a_{20}$, for instance, refers to the average number of years lived after their 20th birthday by people who die between their 20th and 25th birthdays. When $n=1$, the $n$ subscript is typically omitted.
 
-In functions `lifetab()` and `lifeexp()`, calculation methods are specified through four arguments: 
+Functions `lifetab()` and `lifeexp()` have four arguments for specifying calculation methods: 
 
-- `infant`, which specifies how $a_0$ is calculated (note that, in demographic notation, when $n = 1$ the $n$ subscript is typically omitted),
+- `infant`, which specifies how $a_0$ is calculated,
 - `child`, which specifies how $_4a_1$ is calculated,
-- `closed`, which specifies how all other closed intervals (ie $a_x$ and $_5a_x$) are calculated, and 
+- `closed`, which specifies how $_na_x$ for all other closed intervals are calculated, and 
 - `open`, which specifies how the final interval, $_{\infty}a_x$ is calculated.
 
 Different choices of method are available for each argument. In some cases, different formulas are used for females and males. The choices and formulas are as follows:
@@ -154,25 +152,29 @@ Different choices of method are available for each argument. In some cases, diff
 | `child`  | `"CD"`         | Male     | $$_4a_1 = \begin{cases} 1.651 - 2.816 m_0 & 0 \le m_0 < 0.107 \\ 1.352 &  m_0 \ge 0.107 \end{cases}$$                                                              |
 | `closed`   | `"constant"`   | \<any\>    | $$_na_x = \frac{1 - (n \times {_n}m_x + 1) e^{-n \times {_n}m_x}}{_nm_x (1 - e^{-n \times {_n}m_x})}$$ |
 | `closed`   | `"linear"`     | \<any\>    | $$_na_x = 0.5 n$$                                                                                                                                                  |
-| `open`     | `"constant"`   | \<any\>    | $$_{\infty}a_{\omega} = \frac{l_{\omega}}{_{\infty}m_{\omega}}$$                                                                                                                                |
+| `open`     | `"constant"`   | \<any\>    | $$_{\infty}a_{\omega} = \frac{1}{_{\infty}m_{\omega}}$$                                                                                                                                |
 
-Once the $_na_x$ have been determined, deriving the remaining life table quantities is straightforward. The probability of dying within each interval, $_nq_x$, is
+In the table above, the values for `"CD"` are from @coale1983regional, cited in @preston2001demography; the values for `"HMD"` are from @andreev2015average, cited in @wilmoth2021methods; and the values for `"constant"` are expected values for an exponential distribution with rate $_nm_x$ that has been right-truncated at $n$.
 
-$$_nq_x = \frac{n \times {_n}m_x}{1 + (n -  {_n}a_x) \times {_nm_x}}$$
+Once the $_na_x$ have been determined, the life table is fully specified, and the required calculations can be carried out with no further input from the user.
+
+The probability of dying within each interval is
+
+$$_nq_x = \frac{n \times {_n}m_x}{1 + (n -  {_n}a_x) \times {_nm_x}},$$
 with $_{\infty}q_{\omega} = 1$. Quantity $l_x$ is the number of people surviving to exact age $x$. In `lifetab()`, by default, $l_0 = 100,000$. Remaining values are calculated using 
 
-$$l_{x+n} = (1 - {_nq_x}) \times l_x$$
+$$l_{x+n} = (1 - {_nq_x}) \times l_x.$$
 Quantity $_nd_x$ is the number of people who die between exact ages $x$ and $x+n$,
 
-$$_nd_x = l_x - l_{x+n}$$
+$$_nd_x = l_x - l_{x+n}.$$
 
-Quantity $_nL_x$ is the number of person years lived between exact ages $x$ and $x+n$, which equals the number of person-years lived by people who survive the interval, plus the number of person-years lived by people who die within the interval,
+Quantity $_nL_x$ is the number of person-years lived between exact ages $x$ and $x+n$. It consists of person-years lived by people who survive the interval, plus person-years lived by people who die within the interval,
 
-$$_nL_x = l_{x+n} \times n + {_nd_x} \times {_na_x}$$
-Finally $e_x$, the expected number of years of life remaining to a person aged exactly $x$, is 
-$$e_x = {_nL_x} + {_nL_{x+n}} \cdots + {_{\infty}L_{\omega}}$$.
+$$_nL_x = l_{x+n} \times n + {_nd_x} \times {_na_x}.$$
+Finally, $e_x$, the number of years of life remaining to a person aged exactly $x$, is 
+$$e_x = {_nL_x} + {_nL_{x+n}} + \cdots + {_{\infty}L_{\omega}}$$.
 
-Alternative choices for `infant`, `child`, or `closed` yield different results, though the differences are often small,
+Although the results for `lifetab()` and `lifeexp()` do vary with difference choices for `infant`, `child`, or `closed`, the differences are often small,
 ```{r}
 lin <- nzmort %>%
   lifeexp(by = c(gender, year),
@@ -183,18 +185,27 @@ hmd <- nzmort %>%
           by = year,
           infant = "HMD", 
           prefix = "hmd")
-left_join(lin, hmd, by = c("year", "gender"))
+inner_join(lin, hmd, by = c("year", "gender"))
 ```
-(When `infant` is `"CD"` or `"HMD"`, `lifetab()` and `lifeexp()` require that a `sex` variable be supplied. `lifetab()` and `lifeexp()` automatically include this variable among the `by` variables.)
 
 ### Uncertainty
+
+The examples of life tables and life expectancy so far have all been based on a deterministic input, `mx` column of data frame `nzmort`,
+
+```{r}
+nzmort
+```
+
+The data frame `nzmort_rvec` instead uses a rvec to represent mortality rates,
 
 ```{r}
 library(rvec)
 nzmort_rvec
 ```
 
+The `mx` rvec holds 1000 draws from the posterior distribution from a Bayesian model of mortality. The posterior distribution for infant mortality for females in 2021, for instance, has a posterior median of 0.0032, and a 95% credible interval of (0.0028, 0.0037).
 
+If the input to `lifetab()` or `lifeexp()` is an rvec, then the output will be too. Uncertainty about mortality rates is propagated through to quantities derived from these rates.
 
 ```{r}
 library(rvec)
@@ -206,22 +217,41 @@ nzmort_rvec %>%
 ```
 
 
-# Functions for developers
+# Tools for developers
+
+**poputils** provides some functions that developers creating packages to be used by demographers may find useful. 
 
 ## Labels
 
+`check_age()` and `age_group_type()` can be useful in functions that involve age group labels. `check_age()` performs some basic validity checks, while `age_group_type()` assesses whether a set of labels belongs to type `"single"`, `"five"`, or `"lt"`.
 
+It is often possible to guess the nature of a demographic variable, or of categories within a demographic variable, based on names and labels. Functions `find_var_age()`, `find_var_sexgender()`, `find_var_time()`, `find_label_female()`, and `find_label_male()` help with these sorts of inferences.
 
 ## Data manipulation
+
+Function `groups_colnums()` is helpful when implementing [tidyselect](https://tidyselect.r-lib.org/reference/language.html) methods when the data are held in a grouped data frame.
+
+`matrix_to_list_of_cols()` and `matrix_to_list_of_rows()` convert from matrices to lists of vectors. 
+
+`to_matrix()` converts a data frame to a matrix. The data frame potentially has more than two classification variables, and the rows and/or columns of the matrix can be formed from combinations of these variables.
 
 # Future developments
 
 ## Definite
-- Forecasting
-- Stable popn
-- Time labels
-- Multiple decrement lifetable/lifeexp
+
+- **Stable populations**. Given mortality and fertility profiles, generate the associated stable population.
+- **Time labels** Functions for dealing with time labels analogous to the existing ones dealing with age labels. The functions need to allow for one-month and one-quarter periods, and for 'exact times', ie dates.
+- **Multiple decrement life tables** Extend `lifetab()` and `lifeexp()` to allow for multiple decrements.
+- **Projection accounting** Functions to turn projected demographic rates, and an initial population, into a projected demographic account. Needs flexibility over dimensions included, and needs deterministic and probabilistic versions.
+- **TFR** Function to calculation total fertility rates from age-specific fertility rates
+- **Age, period, cohort labels** Functions to allocate events to age groups, periods, or cohorts, based on data on dates of event and dates of birth.
+
 
 ## Possible
-- Aggregation??
-- 
+
+- **Aggregation function** Using `dplyr::count()`, `dplyr::summarise()`, or `stats::aggregate()` to aggregate counts or rates in a data frame is awkward. Given that this is such a common operation, it might be worthwhile to do a replacement. 
+
+
+
+
+# References
